--- a/script-1.scriv/QuickLook/Preview.html
+++ b/script-1.scriv/QuickLook/Preview.html
@@ -165,7 +165,15 @@
 <ul>
 <li>
 <p class="itemTitle">1. Visit Herbert in Jail</p>
-<p class="itemText">Visit Herbert to talk about spooky stuff</p>
+<p class="itemText">Visit Herbert to talk about spooky stuff</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Ask about why he’s in jail</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Something petty, but I didn’t do it, maaaan! You get a record and you’re in the SYSTEM, you know? Hey but August, you’re on the force right? Can’t you get me out of this??</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Yeahhh I’ll uh see what I can do.</span></p></p>
+<p class="itemText"><p class="p2"><span class="s1"></span><br></p></p>
+<p class="itemText"><p class="p1"><span class="s1">Ask about what he’s been up to since college</span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">"How on earth has it happened, Herbert? I always understood you would succeed to an excellent position in Dorsetshire. Did your father disinherit you? Surely not?"<span class="Apple-converted-space"> </span></span></p></p>
+<p class="itemText"><p class="p1"><span class="s1">No man, he kic...</p>
 </li>
 </ul>
 <hr class="afterText"/>
